--- a/activity.html
+++ b/activity.html
@@ -53,6 +53,21 @@
         transform: scale(1.3);
         /*transform-origin: left top;*/
     }
+
+    table {
+        width: 500px;
+        border: 1px solid black;
+        border-collapse: collapse;
+    }
+
+    th, td {
+        padding: 15px;
+        border: 1px solid black;
+    }
+
+    th {
+        background-color: #ddd;
+    }
 </style>
 <div id="container">
     <h2>String의 활동</h2>
